--- a/LiteTube/LiteTube.csproj
+++ b/LiteTube/LiteTube.csproj
@@ -113,6 +113,14 @@
     <Compile Include="Common\VisualHelper.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="ContainerBootstrapper.cs" />
+    <Compile Include="Controls\GenericListView.cs" />
+    <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
+    <Compile Include="Converters\CommentMarginConverter.cs" />
+    <Compile Include="Converters\CountToVisibilityConverter.cs" />
+    <Compile Include="Converters\ObjectToVisibilityConverter.cs" />
+    <Compile Include="Converters\StringToVisibilityConverter.cs" />
+    <Compile Include="Converters\TimeSpanFormatConverter.cs" />
+    <Compile Include="Converters\UppercaseConverter.cs" />
     <Compile Include="DataClasses\DataClasses.cs" />
     <Compile Include="DataClasses\Extensions.cs" />
     <Compile Include="DataClasses\IActivity.cs" />
@@ -152,6 +160,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\NodeViewModelBase.cs" />
     <Compile Include="ViewModels\PropertyChangedBase.cs" />
     <Compile Include="ViewModels\VideoItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
@@ -161,6 +170,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
+    <Page Include="Controls\LoadingListView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -229,9 +242,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controls\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Reference Include="Google.Apis, Version=1.9.1.12395, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Google.Apis.1.9.1\lib\wp8\Google.Apis.dll</HintPath>
