load video categories. Item tap.

--- a/LiteTube/LiteTube.csproj
+++ b/LiteTube/LiteTube.csproj
@@ -165,11 +165,13 @@
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\MostPopularViewModel.cs" />
-    <Compile Include="ViewModels\NodeViewModelBase.cs" />
+    <Compile Include="ViewModels\Nodes\NodeViewModelBase.cs" />
+    <Compile Include="ViewModels\Nodes\VideoCategoryNodeViewModel.cs" />
     <Compile Include="ViewModels\PropertyChangedBase.cs" />
-    <Compile Include="ViewModels\SectionViewModel.cs" />
+    <Compile Include="ViewModels\SectionBaseViewModel.cs" />
     <Compile Include="ViewModels\Nodes\VideoItemViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="ViewModels\VideoCategoryViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
