--- a/.hgignore
+++ b/.hgignore
@@ -2,3 +2,5 @@ syntax: glob
 LiteTube/Bin/Debug/*
 LiteTube/obj/*
 LiteTube/packages/*
+LiteTube/.vs/LiteTube/v14/.suo
+LiteTube/LiteTube.csproj.user
