--- a/LiteTube/LiteTube.csproj
+++ b/LiteTube/LiteTube.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Common\Extensions\ControlExtensions.cs" />
     <Compile Include="Common\DeviceHistory.cs" />
     <Compile Include="Common\Helpers\NavigationHelper.cs" />
+    <Compile Include="Common\ScrollViewerMonitor.cs" />
     <Compile Include="Common\SubscribeCommand.cs" />
     <Compile Include="Common\Tools\ThemeManager.cs" />
     <Compile Include="Common\UnsubscribeCommand.cs" />
@@ -173,7 +174,6 @@
     <Compile Include="Interactivity\ItemsNotFoundBehavior.cs" />
     <Compile Include="Interactivity\ItemsSizeBehavior.cs" />
     <Compile Include="Interactivity\ItemWidthBehavior.cs" />
-    <Compile Include="Interactivity\LoadItemsByScrollBehavior.cs" />
     <Compile Include="LocalizedStrings.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
