--- a/LiteTube/LiteTube.csproj
+++ b/LiteTube/LiteTube.csproj
@@ -170,11 +170,14 @@
     <Compile Include="DataClasses\IVideoCategory.cs" />
     <Compile Include="DataClasses\IVideoItem.cs" />
     <Compile Include="DataClasses\RatingEnum.cs" />
+    <Compile Include="DataModel\Context.cs" />
     <Compile Include="DataModel\DataSourceExceptionWrapper.cs" />
     <Compile Include="DataModel\IDataSource.cs" />
     <Compile Include="DataModel\IYouTubeService.cs" />
+    <Compile Include="DataModel\NullableDataSource.cs" />
     <Compile Include="DataModel\PlaylistCahce.cs" />
     <Compile Include="DataModel\RemoteDataSource.cs" />
+    <Compile Include="DataModel\RemoteDataSourceThreadSafe.cs" />
     <Compile Include="DataModel\SubscriptionsHolder.cs" />
     <Compile Include="DataModel\VideoItemsCache.cs" />
     <Compile Include="DataModel\YouTubeConstants.cs" />
