--- a/LiteTube/LiteTube.csproj
+++ b/LiteTube/LiteTube.csproj
@@ -100,6 +100,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BugTreckerReporter.cs" />
     <Compile Include="ChannelListPage.xaml.cs">
       <DependentUpon>ChannelListPage.xaml</DependentUpon>
@@ -196,7 +197,6 @@
     <Compile Include="MenuPage.xaml.cs">
       <DependentUpon>MenuPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.ru-RU.Designer.cs">
       <DependentUpon>AppResources.ru-RU.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -353,6 +353,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Properties\AssemblyInfo.cs.tmpl" />
     <None Include="DataModel\client_secrets.json" />
     <None Include="packages.config" />
     <None Include="Properties\AppManifest.xml" />
@@ -520,4 +521,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
   </Target>
+  <PropertyGroup>
+    <PreBuildEvent>cscript.exe "$(ProjectDir)\hgVersion.jse"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
