--- a/.hgignore
+++ b/.hgignore
@@ -15,3 +15,4 @@ LiteTube/Assets/ScreenShots/wp_ss_20160203_0004.png
 LiteTube/Assets/ScreenShots/wp_ss_20160203_0005.png
 LiteTube/Assets/ScreenShots/wp_ss_20160203_0006.png
 LiteTube/Assets/ScreenShots/wp_ss_20160204_0001.png
+LiteTube/Properties/AssemblyInfo.cs.orig
