--- a/LiteTube/app.config
+++ b/LiteTube/app.config
@@ -12,4 +12,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <uri>
+    <schemeSettings>
+      <add name="https" genericUriParserOptions="DontUnescapePathDotsAndSlashes" />
+    </schemeSettings>
+  </uri>
 </configuration>
