--- a/.hgignore
+++ b/.hgignore
@@ -15,5 +15,5 @@ LiteTube/Assets/ScreenShots/wp_ss_20160203_0004.png
 LiteTube/Assets/ScreenShots/wp_ss_20160203_0005.png
 LiteTube/Assets/ScreenShots/wp_ss_20160203_0006.png
 LiteTube/Assets/ScreenShots/wp_ss_20160204_0001.png
-LiteTube/Properties/AssemblyInfo.cs.orig
+LiteTube/Properties/AssemblyInfo.cs
 Fast app resume backstack sample/*
